<resources>
    <string name="app_name">Shuffle Alarm Clock</string>
    <string name="main_title">Your Alarm</string>
    <string name="main_button_edit_text">Edit Alarm</string>
    <string name="edit_alarm_title">Edit Alarm</string>
    <string name="main_button_settings_text">Settings</string>
    <string name="alarm_time">12:00 p.m.</string>
    <string name="edit_alarm_button_picker">Adjust Time</string>
    <string name="edit_alarm_onOff">Turn alarm On/Off</string>
    <string name="edit_alarm_saveChanges">Save Changes</string>
    <string name="edit_alarm_dontSave">Discard Changes</string>
    <string name="edit_alarm_time_display_new">New alarm time: 12:00 p.m.</string>
    <string name="home_toggle_on">ON   </string>
    <string name="home_toggle_off">OFF   </string>
    <string name="alarm_off_text">Alarm is currently off</string>
    <string name="time_left">Time left until alarm: </string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="settings_title">Settings</string>
    <string name="settings_wake_device">Wake up device for alarm</string>
    <string name="save">Save</string>
    <string name="settings_show_notifications">Receive notifications from app</string>

    <string name="alarm_small_notification_title_template">Alarm small: %1$s</string>


    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="notification_default_title">YOUR ALARM\'S GOING OFF</string>
    <string name="notification_default_text">Your scheduled alarm is going off.\nPress clock to snooze or here to dismiss</string>
    <string name="notification_default_snooze_duration">Snooze\n5 min</string>
</resources>
