<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="30sp"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/main_button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:onClick="editAlarm"
        android:padding="10sp"
        android:text="@string/main_button_edit_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text_title"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/main_button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:onClick="editSettings"
        android:padding="10sp"
        android:text="@string/main_button_settings_text"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text_title"
        app:layout_constraintVertical_bias="0.9" />

    <!-- Start of second ConstraintLayout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:background="@color/colorAccent"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/second_layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_time"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>